<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Editor_Activity"
    android:orientation="vertical">
    <!--<Overview>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Label-->
        <TextView
            android:text="@string/overview"
            style="@style/CategoryStyle"/>
    <!--Input field-->
        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="4dp"
            android:orientation="vertical">
            <!--Name field-->
            <EditText
                android:id="@+id/item_name"
                android:hint="@string/Name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
            <EditText
                android:id="@+id/company_name"
                android:hint="@string/Product_Company"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!--Supplier-->
    <LinearLayout
        android:id="@+id/supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/S_Name"
            style="@style/CategoryStyle"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/supplier_name"
            android:padding="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/s_name"
                android:hint="@string/supplyName"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
            <EditText
                android:id="@+id/mail"
                android:hint="@string/e_mail"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
            <EditText
                android:id="@+id/number"
                android:hint="@string/number"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!--barcode-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/code">
        <TextView
            android:text="@string/code"
            style="@style/CategoryStyle"/>
        <LinearLayout
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/barcode"
                android:layout_weight="1"
                android:text="getCode"
                style="@style/EditorFieldStyle"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/scanbutton"
                android:textColor="#000"
                style="?android:attr/buttonStyleSmall"
                android:background="@color/white"
                android:id="@+id/scan_button"/>
        </LinearLayout>
    </LinearLayout>

    <!--Price-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/priceInfo">
        <TextView
            android:text="@string/price"
            style="@style/CategoryStyle"/>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/item_price"
                android:layout_weight="1"
                android:hint="Price"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!--Amount-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/amountInfo">
        <TextView
            android:text="@string/Amount"
            style="@style/CategoryStyle"/>
        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/item_amount"
                android:hint="Amount"
                android:inputType="number"
                style="@style/EditorFieldStyle"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>